--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
   <meta charset="UTF-8" />
   <title>MathVue</title>
 
+  <!-- Our Vue template -->
   <div id="app">
     {{ message }}
   </div>
 
+  <!-- Get Vue, and load our app's code -->
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="./app.js"></script>
 
