--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
-<html>
-  <meta charset="UTF-8" />
-  <title>MathVue</title>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Our Vue template -->
-  <div id="app">
-    {{ message }}
-  </div>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" crossorigin="anonymous">
 
-  <!-- Get Vue, and load our app's code -->
-  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-  <script src="./app.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  </head>
+ 
+  <body>
+    <h1>MathVue</h1>
 
+    <!-- Our Vue template -->
+    <div id="app">
+      {{ message }}
+    </div>
+    
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
+
+    <!-- Get Vue, and load our app's code -->
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="./app.js"></script>
+
+  </body>
 </html>
