--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
       {{ message }}
 
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <h2>Formula</h2>
-          <textarea id="formulaTextarea" style="width:100%; height:320px" wrap="off">{{ formula }}</textarea>
-
+          <textarea v-model="formula" style="width:100%; height:400px" xxplaceholder="add multiple lines"></textarea>
           <button v-on:click="run">Run</button>
         </div>
 
-        <div class="col-md 6">
+        <div class="col-lg 6">
           <h2>Canvas</h2>
           <canvas id="mathvisionCanvas" width="200" height="200" style="image-rendering: -moz-crisp-edges !important;">
           </canvas>
@@ -43,6 +42,9 @@
     <!-- Get Vue, and load our app's code -->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="./app.js"></script>
+
+    <!-- Load Processing -->
+    <script src="processing_v1.4.8.min.js"></script>
 
   </body>
 </html>
