--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       {{ message }}
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-md-6">
           <h2>Formula</h2>
           <textarea v-model="formula" style="width:100%; height:400px" xxplaceholder="add multiple lines"></textarea>
           <button v-on:click="run">Run</button>
         </div>
 
-        <div class="col-lg 6">
+        <div class="col-md 6">
           <h2>Canvas</h2>
           <canvas id="mathvisionCanvas" width="200" height="200" style="image-rendering: -moz-crisp-edges !important;">
           </canvas>
