--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" crossorigin="anonymous">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  </head>
  
-  <body>
+  <body class="p-4">
     <h1>MathVue</h1>
 
     <!-- Our Vue template -->
@@ -21,13 +20,15 @@
       <div class="row">
         <div class="col-md-6">
           <h2>Formula</h2>
-          <textarea v-model="formula" style="width:100%; height:400px" xxplaceholder="add multiple lines"></textarea>
+          <textarea v-model="formula"
+                    style="width:100%; min-height:300px; font-size: 0.75rem;"></textarea>
           <button v-on:click="run">Run</button>
         </div>
 
         <div class="col-md 6">
           <h2>Canvas</h2>
-          <canvas id="mathvisionCanvas" width="200" height="200" style="image-rendering: -moz-crisp-edges !important;">
+          <canvas id="mathvisionCanvas" width="300" height="300"
+                  style="border: 1px solid lightgrey">
           </canvas>
         </div>
       </div>
