--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
           <textarea v-model="formula"
                     style="width:100%; min-height:300px; font-size: 0.75rem;"></textarea>
           <button v-on:click="run">Run</button>
+          <button v-on:click="pause" v-show="started && running">Pause</button>
+          <button v-on:click="resume" v-show="started && !running">Resume</button>
         </div>
 
         <div class="col-md 6">
@@ -40,12 +42,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
-    <!-- Get Vue, and load our app's code -->
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="./app.js"></script>
-
     <!-- Load Processing -->
     <script src="processing_v1.4.8.min.js"></script>
+    <script src="pjs_glue.js"></script>
 
+    <!-- Get Vue, and load our app's code -->
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="app.js"></script>
+    
   </body>
 </html>
