--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         <table class="ml-3" style="width:95%">
           <tr>
             <td class="align-top"> <a class="badge badge-pill badge-default" v-bind:href="link">Link</a> </td>
-            <td class="pl-2 pb-2">Link to this page, with formula as URL</td>
+            <td class="pl-2 pb-2">Link to current page, with formula as URL. Can be bookmarked.</td>
           </tr>
         
           <tr>
             <td class="align-top"> <a class="badge badge-pill badge-default" v-bind:href="linkToGithub"
                                       target="_blank">Github Link <i class="fas fa-external-link-alt"></i></a> </td>
-            <td class="pl-2 pb-2">Link to Github preview page, with formula as URL</td>
+            <td class="pl-2 pb-2">Link to Github preview page, with formula as URL. Can be bookmarked.</td>
           </tr>
 
           <tr>
