Modified access token acquisition: implicit grant.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="p-md-3 p-1 mr-3 mr-md-0">
 
     <!-- Dropbox login stuff -->
-    <a href="https://www.dropbox.com/oauth2/authorize?client_id=65hebhcza1whb68&response_type=code&redirect_uri=http://localhost:3001/">Login to Dropbox</a>
+    <a href="https://www.dropbox.com/oauth2/authorize?client_id=65hebhcza1whb68&response_type=token&redirect_uri=http://localhost:3001/">Login to Dropbox</a>
     
     <h1>MathVue</h1>
 
@@ -134,7 +134,6 @@
     <!-- Get Vue, and load our app's code -->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://unpkg.com/vue-router@2.0.0/dist/vue-router.js"></script>
-    <script src="axios.min.js"></script>
     <script src="app.js"></script>
     
   </body>
