--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   Save to Dropbox
                 </span><br/>
                 <span class="badge badge-pill badge-default" style="cursor:pointer" v-on:click="dropboxLoad">
-                  Load from to Dropbox
+                  Load from Dropbox
                 </span>
               </div>
               <div v-if="!dropboxLoggedIn">
@@ -127,27 +127,27 @@
           
           <tr>
             <td class="align-top"> <span class="badge badge-pill badge-disabled">Formula</span> </td>
-            <td class="pl-2 pb-2">Save only formula</td>
+            <td class="pl-2 pb-2 text-ghosted">Save only formula</td>
           </tr>
 
           <tr>
             <td class="align-top"> <span class="badge badge-pill badge-disabled">Image</span> </td>
-            <td class="pl-2 pb-2">Grab and save image</td>
+            <td class="pl-2 pb-2 text-ghosted">Grab and save image</td>
           </tr>
 
           <tr>
             <td class="align-top"> <span class="badge badge-pill badge-disabled">Anim GIF</span> </td>
-            <td class="pl-2 pb-2">Save as animated GIF</td>
+            <td class="pl-2 pb-2 text-ghosted">Save as animated GIF</td>
           </tr>
 
           <tr>
             <td class="align-top"> <span class="badge badge-pill badge-disabled">Sketch</span> </td>
-            <td class="pl-2 pb-2">Save as PDE sketch for Processing or Processing.js</td>
+            <td class="pl-2 pb-2 text-ghosted">Save as PDE sketch for Processing or Processing.js</td>
           </tr>
 
           <tr>
             <td class="align-top"> <span class="badge badge-pill badge-disabled">Web page</span> </td>
-            <td class="pl-2 pb-2">Save as standalone Web page, or [x] HTML snippet</td>
+            <td class="pl-2 pb-2 text-ghosted">Save as standalone Web page, or [x] HTML snippet</td>
           </tr>
 
       </div>
