--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           </div>
         </div>
 
-        <!-- Exports -->
+        <!-- Storage -->
         <div class="row pt-3">
           <div class="col-md-12">
-            <h2>Exports</h2>
+            <h2>Storage</h2>
           </div>
 
           <table class="ml-3" style="width:95%">
@@ -111,10 +111,23 @@
             <td class="pl-2 pb-2">
               <div v-if="dropboxLoggedIn">
                 <div v-if="dropboxDisplayname">
-                  You are logged in on Dropbox as <i>{{dropboxDisplayname}}</i>
-                  <span class="badge badge-pill badge-default" style="cursor:pointer" v-on:click="dropboxLogout">
-                    Logout
-                  </span>
+                  <img style="height: 20px" v-bind:src="dropboxProfilePhotoUrl">
+
+                  <small>
+                  {{dropboxDisplayname}}
+                  </small>
+                  |
+                  <small>
+                    <a href="https://www.dropbox.com/home/Apps/MathVue" target="_blank">
+                      MathVue folder <i class="fas fa-external-link-alt"></i></a>
+                  </small>
+                  |
+                  <small>
+                    <div class="badge badge-pill badge-default" style="cursor:pointer" v-on:click="dropboxLogout">
+                      Logout
+                    </div>
+                  </small>
+
                 </div>
                 <div v-if="!dropboxDisplayname" style="display: inline-block;" class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated"
