Made dropbox and file_dialog classes.

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <script src="mathvision_template.js"></script>
 
     <!-- Dropbox -->
-    <script src="dropbox_glue.js"></script>
+    <script src="dropbox_storage.js"></script>
 
     <!-- Get Vue, and load our app's code -->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
