--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
   </head>
   
   <body class="p-md-3 p-1 mr-3 mr-md-0">
+
+    <!-- Github -->
+    <a href="https://github.com/pbauermeister/MathVue" target="_blank">
+      <img style="position: absolute; top: 0; right: 0; border: 0;"
+	   src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
+	   alt="Fork me on GitHub">
+    </a>
+
     
     <h1>MathVue</h1>
 
