--- a/index.html
+++ b/index.html
@@ -253,7 +253,17 @@ MOUSE_MOVE  = false;
                 </div>
               </td>
             </tr>
-            
+	  </table>
+
+	</div>
+        
+        <!-- Exports -->
+        <div class="row pt-3">
+          <div class="col-md-12">
+            <h2>Export</h2>
+          </div>
+
+	  <table>
             <tr>
               <td class="pl-2 pb-2 text-ghosted">- Coming soon -</td>
               <td class="pl-2 pb-2 text-ghosted">Grab and save image</td>
