New formula (Schwarzschild flyby)

--- a/webassembly.html
+++ b/webassembly.html
@@ -20,7 +20,7 @@
       <div>
 	<canvas height="400" id="canvas" width="800"></canvas>
       </div>
-      <button class="btn btn-sm btn-primary" v-on:click="compile_code">Compile</button>
+      <button class="btn btn-sm btn-primary" v-on:click="load_source">Compile</button>
 
       <div class="float-right">
         <a id="fullScreenButton"
