--- a/webassembly.html
+++ b/webassembly.html
@@ -23,9 +23,31 @@
       <button class="btn btn-sm btn-primary" v-on:click="load_source">Compile</button>
 
       <div class="float-right">
+	<span v-if="loading">
+          <a class="mx-1">
+	    <i class="fas fa-hourglass-half" aria-hidden="true"></i>
+	  </a>
+	</span>
+	<span v-else>
+          <a style="cursor:pointer" class="mx-1"
+	     v-show="running"
+             v-on:click="pause"
+	     >
+	    <i class="fa fa-pause" aria-hidden="true"></i>
+	  </a>
+          <a style="cursor:pointer" class="mx-1"
+	     v-show="!running"
+             v-on:click="resume">
+	    <i class="fa fa-play" aria-hidden="true"></i>
+	  </a>
+	</span>
+
         <a id="fullScreenButton"
+	   class="mx-1"
            style="cursor:pointer" title="Full screen"
-           v-on:click="fullScreen"><i class="fa fa-expand" aria-hidden="true"></i></a>
+           v-on:click="fullScreen">
+	  <i class="fa fa-expand" aria-hidden="true"></i>
+	</a>
       </div>
     </div>
 
