--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="bootstrap4-dialog.css">
+    <link rel="stylesheet" href="/common/lib/bootstrap4-dialog.css">
 
     <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/common/css/style.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
@@ -304,16 +304,16 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
-    <script src="bootstrap4-dialog.js" crossorigin="anonymous"></script>
+    <script src="/common/lib/bootstrap4-dialog.js" crossorigin="anonymous"></script>
 
     <!-- Load Processing -->
-    <script src="processing_v1.4.8.js"></script>
+    <script src="/pjs/processing_v1.4.8.js"></script>
 
     <!-- Load Mathvision -->
-    <script src="mathvision_template.js"></script>
+    <script src="/pjs/mathvision_template.js"></script>
 
     <!-- Dropbox -->
-    <script src="dropbox_storage.js"></script>
+    <script src="/common/js/dropbox_storage.js"></script>
 
     <!-- Get Vue, and load our app's code -->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
@@ -322,12 +322,12 @@
     <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
 
-    <script src="file_dialog.js"></script>
+    <script src="/common/js/file_dialog.js"></script>
 
-    <script src="pjs_adaptor.js"></script>
-    <script src="pjs_formula.js"></script>
-    <script src="pjs_help.js"></script>
-    <script src="app.js"></script>
+    <script src="/pjs/adaptor.js"></script>
+    <script src="/pjs/formula.js"></script>
+    <script src="/pjs/help.js"></script>
+    <script src="/pjs/app.js"></script>
 
     <noscript>Please enable JavaScript for MathVue to work.</noscript>
     <script id="dsq-count-scr" src="//mathvue.disqus.com/count.js" async></script>
