--- a/wasm/index.html
+++ b/wasm/index.html
@@ -7,11 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="bootstrap4-dialog.css">
+    <link rel="stylesheet" href="/common/lib/bootstrap4-dialog.css">
 
     <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/common/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
 
@@ -55,7 +55,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
-    <script src="bootstrap4-dialog.js" crossorigin="anonymous"></script>
+    <script src="/common/lib/bootstrap4-dialog.js" crossorigin="anonymous"></script>
 
     <!-- Get Vue, and load our app's code -->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
@@ -63,7 +63,6 @@
     <script src="https://unpkg.com/vue-router@2.0.0/dist/vue-router.js"></script>
     <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
 
-    <script src="threadify.min.js"></script>
-    <script src="app_wasm.js"></script>
+    <script src="/wasm/app.js"></script>
   </body>
 </html>
